Update NetworkPolicy for gitea

--- a/apps/base/gitea/resources/deployment.yaml
+++ b/apps/base/gitea/resources/deployment.yaml
@@ -8,6 +8,7 @@ metadata:
     app.kubernetes.io/instance: gitea
     app.kubernetes.io/name: gitea
   name: gitea
+  namespace: gitea
 spec:
   replicas: 1
   revisionHistoryLimit: 0
