--- a/apps/base/gitea/resources/sopssecret.yaml
+++ b/apps/base/gitea/resources/sopssecret.yaml
@@ -2,7 +2,7 @@ apiVersion: isindir.github.com/v1alpha3
 kind: SopsSecret
 metadata:
   name: gitea-docker
-  namespace: immich
+  namespace: gitea
 spec:
   secretTemplates:
     - name: ENC[AES256_GCM,data:oC2yZqLnbtu7Lg==,iv:9D5YG4W3bo6OtdTdLczcypRjNUGMmJtEVubYKhS+4/w=,tag:kfL5hLllJbxoZkDKV7JB/A==,type:str]
@@ -20,7 +20,7 @@ sops:
         cy8yNllwTEdZV1RDQUV2THUzMlR3R2MKFQ4sGL+WrwFiYwFv0Gv80nAkffuNnCdp
         d0c25fkMblaZTgOpXcdzM+HD5Q5qTzMWdTuaQI/yuHu1TDWfAnwNNA==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2026-02-20T02:07:42Z"
-  mac: ENC[AES256_GCM,data:WE6l2lC5I7Z09SLrlzYF9dqQxAtEu/ruHwGX4RqYwxHRBTimJCE3kTF9wFxD94LvLE81yTdywo4S4sqNff+ErgsgpkGaK2iYqEidt5lhTqv3G9CIUM0iDQ4qG4vE8ZK7M0CQ4hUeGyqlk+L0vdyH0iP2XtwmSeR9SZgC/6qY6CA=,iv:sRRKme6d13vC+rbw76uUXjL20Fh2WaZr+e1+Lj2ddpY=,tag:Jy52i+XuyaF7oU7f09Mztw==,type:str]
+  lastmodified: "2026-02-22T23:55:43Z"
+  mac: ENC[AES256_GCM,data:AeqV9wQ2wcVA2xMLf7bygpimJoyFceK5LepF1oObAZ/cn4BvNoSceBYzx9kU128kViA7dc/R+6yJUnxxfdFeJo09ah7UrkZQAX60KTMfjBFWfjBrnaYUvkF2sv5cU8xFaUK8H8AP76Im4VmB7Jcoy1W0NMWIgoX0NDCDw2e88QU=,iv:H3JMk1JR+NAR0Hh1GYoLiKGZ9qe5fHV5+N4MEx7jars=,tag:cpMk0ZYVDdNE2DMAPpU4Zw==,type:str]
   encrypted_suffix: Templates
-  version: 3.12.0
+  version: 3.12.1
