--- a/apps/base/gitea/resources/certificate.yaml
+++ b/apps/base/gitea/resources/certificate.yaml
@@ -3,6 +3,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: gitea
+  namespace: gitea
 spec:
   dnsNames:
     - gitea.example.com
