--- a/apps/base/gitea/resources/cronjob.yaml
+++ b/apps/base/gitea/resources/cronjob.yaml
@@ -7,6 +7,7 @@ metadata:
     app.kubernetes.io/instance: gitea
     app.kubernetes.io/name: gitea
   name: gitea-checkpoint
+  namespace: gitea
 spec:
   jobTemplate:
     spec:
