--- a/apps/base/gitea/resources/persistentvolume.yaml
+++ b/apps/base/gitea/resources/persistentvolume.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: gitea-data
+  namespace: gitea
 spec:
   accessModes:
     - ReadWriteOnce
