--- a/apps/base/gitea/resources/persistentvolumeclaim.yaml
+++ b/apps/base/gitea/resources/persistentvolumeclaim.yaml
@@ -3,9 +3,10 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: gitea-data
+  namespace: gitea
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteOncePod
   resources:
     requests:
       storage: 10Gi
@@ -17,6 +18,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: gitea-valkey-data
+  namespace: gitea
 spec:
   accessModes:
     - ReadWriteOnce
