--- a/apps/base/redirector/resources/sopssecret.yaml
+++ b/apps/base/redirector/resources/sopssecret.yaml
@@ -2,7 +2,7 @@ apiVersion: isindir.github.com/v1alpha3
 kind: SopsSecret
 metadata:
   name: redirector-docker
-  namespace: immich
+  namespace: redirector
 spec:
   secretTemplates:
     - name: ENC[AES256_GCM,data:9mhIC+40ruossQ==,iv:HnoZ29hrlG/uHy1i2AqAT+noMf7k5gdyS/LWJ0r3Idw=,tag:Y9LzZAq54yID/SdA/xj/Cg==,type:str]
@@ -20,7 +20,7 @@ sops:
         SkpFRnM4M2VxWlI3MlYxckk4SWRtOUEKyqoqKinz+BdbQmPXHTu8LPHGfrqpyDQb
         HuqJeS9y9yt0WOcdcPSziUq+xJa2mJfEha3BWkaIsw7RzDYg7HC9OQ==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2026-02-20T02:08:23Z"
-  mac: ENC[AES256_GCM,data:1+mwSojOLZ7OppsCkdnuiwoNWs8O+7BBQuneGldFGDb438dGy88tGkdQqVTeUxgxgr/xTM9qVU6VjWCeKazhycZuhmky3wQaWo/8Tgtjpc+MBn8uN/IwAkI+lFaS2bqGjUQAQV8dXCFoKkQrSjAij5Gl3K4CjPDGKjwpIIa5/Kw=,iv:PjS5Z9k2cmcqnEHy1jMh8FvMGatdDhblgoIkz9e/qLY=,tag:vbLcf8ZxASwREUxO/eNOdw==,type:str]
+  lastmodified: "2026-02-23T00:17:52Z"
+  mac: ENC[AES256_GCM,data:wxXGqpJ6UalfCO2tD1OxRLIl8XfpSc73rqHTZOPZMj/G9rubHqfRBM4zIsaYZtSeVgRKSJjTSoqg4UyvubYP1lMoBfXplQIzo75AWBU2k/8DuTNE7rK7nUmWcOfoQj5P2/21GRxvjmYZFSvuIKwIKsFfW4zBfxgJYmtHG3c8QOA=,iv:BfsQgUbZlf2S3fcBrtoJvbO7WWLJFCe/PrvfkRoJLks=,tag:gGp0x/q4hny7q/7NLU4lUw==,type:str]
   encrypted_suffix: Templates
-  version: 3.12.0
+  version: 3.12.1
