--- a/apps/base/vaultwarden/resources/persistentvolume.yaml
+++ b/apps/base/vaultwarden/resources/persistentvolume.yaml
@@ -6,9 +6,10 @@ metadata:
     app.kubernetes.io/instance: vaultwarden
     app.kubernetes.io/name: vaultwarden-data
   name: vaultwarden-data
+  namespace: vaultwarden
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteOncePod
   capacity:
     storage: 1Gi
   hostPath:
