--- a/apps/base/vaultwarden/resources/serviceaccount.yaml
+++ b/apps/base/vaultwarden/resources/serviceaccount.yaml
@@ -7,3 +7,4 @@ metadata:
     app.kubernetes.io/instance: vaultwarden
     app.kubernetes.io/name: vaultwarden
   name: vaultwarden
+  namespace: vaultwarden
