--- a/apps/base/redirector/resources/deployment.yaml
+++ b/apps/base/redirector/resources/deployment.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     reloader.stakater.com/auto: !!str true
   name: redirector
+  namespace: redirector
 spec:
   replicas: 1
   revisionHistoryLimit: 0
