--- a/apps/base/redirector/resources/middleware.yaml
+++ b/apps/base/redirector/resources/middleware.yaml
@@ -3,6 +3,7 @@ apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: ip-allowlist
+  namespace: redirector
 spec:
   ipAllowList:
     sourceRange:
