--- a/apps/base/redirector/resources/networkpolicy.yaml
+++ b/apps/base/redirector/resources/networkpolicy.yaml
@@ -3,6 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: redirector
+  namespace: redirector
 spec:
   ingress:
     - from:
