--- a/apps/base/vaultwarden/kustomization.yaml
+++ b/apps/base/vaultwarden/kustomization.yaml
@@ -2,8 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: vaultwarden
-
 resources:
   - resources/certificate.yaml
   - resources/cronjob.yaml
@@ -21,9 +19,10 @@ resources:
   - resources/sopssecret.yaml
 
 configMapGenerator:
-  - name: vaultwarden
-    envs:
+  - envs:
       - configs/vaultwarden.env
+    name: vaultwarden
+    namespace: vaultwarden
     options:
       labels:
         app.kubernetes.io/component: vaultwarden
