--- a/apps/base/vaultwarden/resources/certificate.yaml
+++ b/apps/base/vaultwarden/resources/certificate.yaml
@@ -3,9 +3,9 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: vaultwarden
+  namespace: vaultwarden
 spec:
-  dnsNames:
-    - vaultwarden.example.com
+  dnsNames: []
   duration: 168h
   issuerRef:
     kind: ClusterIssuer
