--- a/apps/base/vaultwarden/resources/middleware.yaml
+++ b/apps/base/vaultwarden/resources/middleware.yaml
@@ -3,6 +3,7 @@ apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: ip-allowlist
+  namespace: vaultwarden
 spec:
   ipAllowList:
     sourceRange:
@@ -21,6 +22,7 @@ apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: security-headers
+  namespace: vaultwarden
 spec:
   headers:
     customResponseHeaders:
