--- a/apps/base/vaultwarden/resources/role.yaml
+++ b/apps/base/vaultwarden/resources/role.yaml
@@ -7,6 +7,7 @@ metadata:
     app.kubernetes.io/instance: vaultwarden
     app.kubernetes.io/name: vaultwarden
   name: vaultwarden
+  namespace: vaultwarden
 rules:
   - apiGroups:
       - extensions
