--- a/apps/base/vaultwarden/resources/rolebinding.yaml
+++ b/apps/base/vaultwarden/resources/rolebinding.yaml
@@ -7,6 +7,7 @@ metadata:
     app.kubernetes.io/instance: vaultwarden
     app.kubernetes.io/name: vaultwarden
   name: vaultwarden
+  namespace: vaultwarden
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -14,3 +15,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: vaultwarden
+    namespace: vaultwarden
