--- a/apps/tombstone/resources/sopssecret.yaml
+++ b/apps/tombstone/resources/sopssecret.yaml
@@ -26,8 +26,34 @@ sops:
         U1dPeFNSOUlXOEw4eVRBNHRqQ1cwVjgKy99XsZuVgqJlTI6uRSYQ3oxkBQ/SKArN
         sG7VU8QsFcJpPZ7k9O5OJNaMujAvFgSPHkZESRbu8pAjTkpAOvbAUQ==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2026-02-23T22:59:25Z"
-  mac: ENC[AES256_GCM,data:P2g7YbfVMbJLp015P61b3Uqh0e5K/Yx3LSFbrGfSXg1BNY5mE0dE58Y7OzMpc9dGjrJtelNJtT2cQrI4mfflzj8UQYC4zYftsRd47czE3ilmUSwRBwuaxAccCRbIdQcEmM5+fUsIo5m6yBnHOVcoWjEeNsxb0HpkDhUpB8LLPGI=,iv:zbhXtCDWa/A8DwkJB4fIkrFghaD5ruEsbPyT/MLiT9s=,tag:p+8a39XNpRYRUPDajgwx/Q==,type:str]
+  lastmodified: "2026-02-23T23:19:47Z"
+  mac: ENC[AES256_GCM,data:i3IHkWYfd73o7sST7+oKfZz+BxPaTu7rdRflyOaIcixaGfYpJDDxZDs3g5z8XPRD3T1uYK79ikoG0g3TJToaziUY2dL+Vj9cquSJsgPVXTznb04VESofURZv1g8DA5yDy3dtXoA3CTLSablXserZLiZzHk0P99jNGTe0MkpHeXg=,iv:9MDX0JE1wuX3q7PUXvCNMBn5HkEyRL0InSprbrC8zP4=,tag:wR3TuNDMIt/q6Uj1IJ2nuw==,type:str]
+  encrypted_suffix: Templates
+  version: 3.12.1
+---
+apiVersion: isindir.github.com/v1alpha3
+kind: SopsSecret
+metadata:
+  name: immich
+  namespace: immich
+spec:
+  secretTemplates:
+    - name: ENC[AES256_GCM,data:JXpqYnsXFwc/vuFbVUwC,iv:BtDgGqRWdNUy2b5t7h4oYTt5d+HYKcKLbmhuZY+evtU=,tag:rAgF5yV0AyWdyapCik42rQ==,type:str]
+      stringData:
+        postgres-password: ENC[AES256_GCM,data:RM2f3/u0eUdBjOtveYywIg==,iv:d4Wt3Y2vonEnfc0HlyTI0EtfV5WidhQicPNwAl1Jg2Y=,tag:GDGYTEjs0/5yKz7KLnK9bw==,type:str]
+sops:
+  age:
+    - recipient: age1cfvwwcvy3qj55kswlwymnvpwuwjymrp7xnjeycxma6qtdzv979qqd3kwue
+      enc: |
+        -----BEGIN AGE ENCRYPTED FILE-----
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZeFhrZFQ5UGhKWTc3dURB
+        Mnc1WVBocko4bHErNk1FSlZUdmtIUEVHSzNvCkN0VUR4MXc2Ym5QNVpXZlJnSFA1
+        UlZONUFRMExDM1RPQlFzZ0xnRTZnRlEKLS0tIHlWV1FXSFVDcVNEVER3WThXckVM
+        U1dPeFNSOUlXOEw4eVRBNHRqQ1cwVjgKy99XsZuVgqJlTI6uRSYQ3oxkBQ/SKArN
+        sG7VU8QsFcJpPZ7k9O5OJNaMujAvFgSPHkZESRbu8pAjTkpAOvbAUQ==
+        -----END AGE ENCRYPTED FILE-----
+  lastmodified: "2026-02-23T23:19:47Z"
+  mac: ENC[AES256_GCM,data:i3IHkWYfd73o7sST7+oKfZz+BxPaTu7rdRflyOaIcixaGfYpJDDxZDs3g5z8XPRD3T1uYK79ikoG0g3TJToaziUY2dL+Vj9cquSJsgPVXTznb04VESofURZv1g8DA5yDy3dtXoA3CTLSablXserZLiZzHk0P99jNGTe0MkpHeXg=,iv:9MDX0JE1wuX3q7PUXvCNMBn5HkEyRL0InSprbrC8zP4=,tag:wR3TuNDMIt/q6Uj1IJ2nuw==,type:str]
   encrypted_suffix: Templates
   version: 3.12.1
 ---
@@ -64,8 +90,8 @@ sops:
         U1dPeFNSOUlXOEw4eVRBNHRqQ1cwVjgKy99XsZuVgqJlTI6uRSYQ3oxkBQ/SKArN
         sG7VU8QsFcJpPZ7k9O5OJNaMujAvFgSPHkZESRbu8pAjTkpAOvbAUQ==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2026-02-23T22:59:25Z"
-  mac: ENC[AES256_GCM,data:P2g7YbfVMbJLp015P61b3Uqh0e5K/Yx3LSFbrGfSXg1BNY5mE0dE58Y7OzMpc9dGjrJtelNJtT2cQrI4mfflzj8UQYC4zYftsRd47czE3ilmUSwRBwuaxAccCRbIdQcEmM5+fUsIo5m6yBnHOVcoWjEeNsxb0HpkDhUpB8LLPGI=,iv:zbhXtCDWa/A8DwkJB4fIkrFghaD5ruEsbPyT/MLiT9s=,tag:p+8a39XNpRYRUPDajgwx/Q==,type:str]
+  lastmodified: "2026-02-23T23:19:47Z"
+  mac: ENC[AES256_GCM,data:i3IHkWYfd73o7sST7+oKfZz+BxPaTu7rdRflyOaIcixaGfYpJDDxZDs3g5z8XPRD3T1uYK79ikoG0g3TJToaziUY2dL+Vj9cquSJsgPVXTznb04VESofURZv1g8DA5yDy3dtXoA3CTLSablXserZLiZzHk0P99jNGTe0MkpHeXg=,iv:9MDX0JE1wuX3q7PUXvCNMBn5HkEyRL0InSprbrC8zP4=,tag:wR3TuNDMIt/q6Uj1IJ2nuw==,type:str]
   encrypted_suffix: Templates
   version: 3.12.1
 ---
@@ -93,7 +119,7 @@ sops:
         U1dPeFNSOUlXOEw4eVRBNHRqQ1cwVjgKy99XsZuVgqJlTI6uRSYQ3oxkBQ/SKArN
         sG7VU8QsFcJpPZ7k9O5OJNaMujAvFgSPHkZESRbu8pAjTkpAOvbAUQ==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2026-02-23T22:59:25Z"
-  mac: ENC[AES256_GCM,data:P2g7YbfVMbJLp015P61b3Uqh0e5K/Yx3LSFbrGfSXg1BNY5mE0dE58Y7OzMpc9dGjrJtelNJtT2cQrI4mfflzj8UQYC4zYftsRd47czE3ilmUSwRBwuaxAccCRbIdQcEmM5+fUsIo5m6yBnHOVcoWjEeNsxb0HpkDhUpB8LLPGI=,iv:zbhXtCDWa/A8DwkJB4fIkrFghaD5ruEsbPyT/MLiT9s=,tag:p+8a39XNpRYRUPDajgwx/Q==,type:str]
+  lastmodified: "2026-02-23T23:19:47Z"
+  mac: ENC[AES256_GCM,data:i3IHkWYfd73o7sST7+oKfZz+BxPaTu7rdRflyOaIcixaGfYpJDDxZDs3g5z8XPRD3T1uYK79ikoG0g3TJToaziUY2dL+Vj9cquSJsgPVXTznb04VESofURZv1g8DA5yDy3dtXoA3CTLSablXserZLiZzHk0P99jNGTe0MkpHeXg=,iv:9MDX0JE1wuX3q7PUXvCNMBn5HkEyRL0InSprbrC8zP4=,tag:wR3TuNDMIt/q6Uj1IJ2nuw==,type:str]
   encrypted_suffix: Templates
   version: 3.12.1
