--- a/apps/tombstone/kustomization.yaml
+++ b/apps/tombstone/kustomization.yaml
@@ -4,11 +4,11 @@ kind: Kustomization
 
 resources:
   - ../base/gitea
+  - ../base/immich
   - ../base/linkerd-viz
   - ../base/media-server
   - ../base/redirector
   - ../base/vaultwarden
-  - resources/certificate.yaml
   - resources/ingressroute.yaml
   - resources/sopssecret.yaml
 
@@ -28,6 +28,68 @@ patches:
     target:
       kind: Certificate
       namespace: gitea
+  - patch: |-
+      - op: replace
+        path: /spec/dnsNames
+        value:
+          - photos.home.arpa
+    target:
+      kind: Certificate
+      namespace: immich
+  - patch: |-
+      - op: replace
+        path: /spec/dnsNames
+        value:
+          - lidarr.home.arpa
+    target:
+      kind: Certificate
+      name: lidarr
+      namespace: media
+  - patch: |-
+      - op: replace
+        path: /spec/dnsNames
+        value:
+          - nzbget.home.arpa
+    target:
+      kind: Certificate
+      name: nzbget
+      namespace: media
+  - patch: |-
+      - op: replace
+        path: /spec/dnsNames
+        value:
+          - ombi.home.arpa
+    target:
+      kind: Certificate
+      name: ombi
+      namespace: media
+  - patch: |-
+      - op: replace
+        path: /spec/dnsNames
+        value:
+          - prowlarr.home.arpa
+    target:
+      kind: Certificate
+      name: prowlarr
+      namespace: media
+  - patch: |-
+      - op: replace
+        path: /spec/dnsNames
+        value:
+          - radarr.home.arpa
+    target:
+      kind: Certificate
+      name: radarr
+      namespace: media
+  - patch: |-
+      - op: replace
+        path: /spec/dnsNames
+        value:
+          - sonarr.home.arpa
+    target:
+      kind: Certificate
+      name: sonarr
+      namespace: media
   - patch: |-
       - op: replace
         path: /spec/dnsNames
@@ -78,6 +140,71 @@ patches:
       namespace: gitea
   - patch: |-
       - op: add
+        path: /spec/template/spec/containers/0/resources
+        value:
+          limits:
+            cpu: !!str 1
+            memory: 2Gi
+      - op: add
+        path: /spec/template/spec/securityContext/fsGroup
+        value: 987
+      - op: add
+        path: /spec/template/spec/securityContext/runAsGroup
+        value: 987
+      - op: add
+        path: /spec/template/spec/securityContext/runAsUser
+        value: 994
+    target:
+      kind: Deployment
+      name: immich-machine-learning
+      namespace: immich
+  - patch: |-
+      - op: add
+        path: /spec/template/spec/securityContext/fsGroup
+        value: 987
+      - op: add
+        path: /spec/template/spec/securityContext/runAsGroup
+        value: 987
+      - op: add
+        path: /spec/template/spec/securityContext/runAsUser
+        value: 994
+    target:
+      kind: Deployment
+      name: immich-postgres
+      namespace: immich
+  - patch: |-
+      - op: add
+        path: /spec/template/spec/containers/0/volumeMounts/-
+        value:
+          mountPath: /dev/dri
+          name: dri
+      - op: add
+        path: /spec/template/spec/securityContext/fsGroup
+        value: 987
+      - op: add
+        path: /spec/template/spec/securityContext/supplementalGroups
+        value:
+          - 44  # video
+          - 105 # render
+      - op: add
+        path: /spec/template/spec/securityContext/runAsGroup
+        value: 987
+      - op: add
+        path: /spec/template/spec/securityContext/runAsUser
+        value: 994
+      - op: add
+        path: /spec/template/spec/volumes/-
+        value:
+          hostPath:
+            path: /dev/dri
+            type: Directory
+          name: dri
+    target:
+      kind: Deployment
+      name: immich-server
+      namespace: immich
+  - patch: |-
+      - op: add
         path: /spec/template/spec/containers/0/env/-
         value:
           name: TZ
@@ -124,6 +251,14 @@ patches:
     target:
       kind: IngressRoute
       namespace: gitea
+  - patch: |-
+      - op: replace
+        path: /spec/routes/0/match
+        value: "Host(`photos.home.arpa`)"
+    target:
+      kind: IngressRoute
+      name: immich
+      namespace: immich
   - patch: |-
       - op: replace
         path: /spec/routes/0/match
