--- a/apps/base/redirector/resources/ingressroute.yaml
+++ b/apps/base/redirector/resources/ingressroute.yaml
@@ -29,7 +29,7 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`medium.com`) || HostRegex(`^.+\.medium\.com$`)
+      match: Host(`medium.com`) || HostRegexp(`^.+\.medium\.com$`)
       middlewares:
         - name: ip-allowlist
       services:
