--- a/apps/tombstone/resources/sopssecret.yaml
+++ b/apps/tombstone/resources/sopssecret.yaml
@@ -26,8 +26,8 @@ sops:
         U1dPeFNSOUlXOEw4eVRBNHRqQ1cwVjgKy99XsZuVgqJlTI6uRSYQ3oxkBQ/SKArN
         sG7VU8QsFcJpPZ7k9O5OJNaMujAvFgSPHkZESRbu8pAjTkpAOvbAUQ==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2026-02-23T23:19:47Z"
-  mac: ENC[AES256_GCM,data:i3IHkWYfd73o7sST7+oKfZz+BxPaTu7rdRflyOaIcixaGfYpJDDxZDs3g5z8XPRD3T1uYK79ikoG0g3TJToaziUY2dL+Vj9cquSJsgPVXTznb04VESofURZv1g8DA5yDy3dtXoA3CTLSablXserZLiZzHk0P99jNGTe0MkpHeXg=,iv:9MDX0JE1wuX3q7PUXvCNMBn5HkEyRL0InSprbrC8zP4=,tag:wR3TuNDMIt/q6Uj1IJ2nuw==,type:str]
+  lastmodified: "2026-02-25T07:53:32Z"
+  mac: ENC[AES256_GCM,data:FlqD8RIdSQhS8zjJk0IDQ5Wp2bZO9SvNmbgo+pasKEolejrIG7qn60hyvHelGJetca/Y4SZbPDnZ/7Alyt0ZWEaEdF0fHQt81eFzkZotVc+r3K/f3bp/hdmjxjaYFO3Orym8vhSzp11IrpMftuA5ALPGJrrG+bFHtIKW9ScGczc=,iv:sA6Y5J+BiDefxdJxcqKmZNK4829UFgqPZo4u3b2Iolk=,tag:9My1TdLaA/XMyXHBqGuz3Q==,type:str]
   encrypted_suffix: Templates
   version: 3.12.1
 ---
@@ -52,8 +52,8 @@ sops:
         U1dPeFNSOUlXOEw4eVRBNHRqQ1cwVjgKy99XsZuVgqJlTI6uRSYQ3oxkBQ/SKArN
         sG7VU8QsFcJpPZ7k9O5OJNaMujAvFgSPHkZESRbu8pAjTkpAOvbAUQ==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2026-02-23T23:19:47Z"
-  mac: ENC[AES256_GCM,data:i3IHkWYfd73o7sST7+oKfZz+BxPaTu7rdRflyOaIcixaGfYpJDDxZDs3g5z8XPRD3T1uYK79ikoG0g3TJToaziUY2dL+Vj9cquSJsgPVXTznb04VESofURZv1g8DA5yDy3dtXoA3CTLSablXserZLiZzHk0P99jNGTe0MkpHeXg=,iv:9MDX0JE1wuX3q7PUXvCNMBn5HkEyRL0InSprbrC8zP4=,tag:wR3TuNDMIt/q6Uj1IJ2nuw==,type:str]
+  lastmodified: "2026-02-25T07:53:32Z"
+  mac: ENC[AES256_GCM,data:FlqD8RIdSQhS8zjJk0IDQ5Wp2bZO9SvNmbgo+pasKEolejrIG7qn60hyvHelGJetca/Y4SZbPDnZ/7Alyt0ZWEaEdF0fHQt81eFzkZotVc+r3K/f3bp/hdmjxjaYFO3Orym8vhSzp11IrpMftuA5ALPGJrrG+bFHtIKW9ScGczc=,iv:sA6Y5J+BiDefxdJxcqKmZNK4829UFgqPZo4u3b2Iolk=,tag:9My1TdLaA/XMyXHBqGuz3Q==,type:str]
   encrypted_suffix: Templates
   version: 3.12.1
 ---
@@ -90,8 +90,8 @@ sops:
         U1dPeFNSOUlXOEw4eVRBNHRqQ1cwVjgKy99XsZuVgqJlTI6uRSYQ3oxkBQ/SKArN
         sG7VU8QsFcJpPZ7k9O5OJNaMujAvFgSPHkZESRbu8pAjTkpAOvbAUQ==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2026-02-23T23:19:47Z"
-  mac: ENC[AES256_GCM,data:i3IHkWYfd73o7sST7+oKfZz+BxPaTu7rdRflyOaIcixaGfYpJDDxZDs3g5z8XPRD3T1uYK79ikoG0g3TJToaziUY2dL+Vj9cquSJsgPVXTznb04VESofURZv1g8DA5yDy3dtXoA3CTLSablXserZLiZzHk0P99jNGTe0MkpHeXg=,iv:9MDX0JE1wuX3q7PUXvCNMBn5HkEyRL0InSprbrC8zP4=,tag:wR3TuNDMIt/q6Uj1IJ2nuw==,type:str]
+  lastmodified: "2026-02-25T07:53:32Z"
+  mac: ENC[AES256_GCM,data:FlqD8RIdSQhS8zjJk0IDQ5Wp2bZO9SvNmbgo+pasKEolejrIG7qn60hyvHelGJetca/Y4SZbPDnZ/7Alyt0ZWEaEdF0fHQt81eFzkZotVc+r3K/f3bp/hdmjxjaYFO3Orym8vhSzp11IrpMftuA5ALPGJrrG+bFHtIKW9ScGczc=,iv:sA6Y5J+BiDefxdJxcqKmZNK4829UFgqPZo4u3b2Iolk=,tag:9My1TdLaA/XMyXHBqGuz3Q==,type:str]
   encrypted_suffix: Templates
   version: 3.12.1
 ---
@@ -119,7 +119,34 @@ sops:
         U1dPeFNSOUlXOEw4eVRBNHRqQ1cwVjgKy99XsZuVgqJlTI6uRSYQ3oxkBQ/SKArN
         sG7VU8QsFcJpPZ7k9O5OJNaMujAvFgSPHkZESRbu8pAjTkpAOvbAUQ==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2026-02-23T23:19:47Z"
-  mac: ENC[AES256_GCM,data:i3IHkWYfd73o7sST7+oKfZz+BxPaTu7rdRflyOaIcixaGfYpJDDxZDs3g5z8XPRD3T1uYK79ikoG0g3TJToaziUY2dL+Vj9cquSJsgPVXTznb04VESofURZv1g8DA5yDy3dtXoA3CTLSablXserZLiZzHk0P99jNGTe0MkpHeXg=,iv:9MDX0JE1wuX3q7PUXvCNMBn5HkEyRL0InSprbrC8zP4=,tag:wR3TuNDMIt/q6Uj1IJ2nuw==,type:str]
+  lastmodified: "2026-02-25T07:53:32Z"
+  mac: ENC[AES256_GCM,data:FlqD8RIdSQhS8zjJk0IDQ5Wp2bZO9SvNmbgo+pasKEolejrIG7qn60hyvHelGJetca/Y4SZbPDnZ/7Alyt0ZWEaEdF0fHQt81eFzkZotVc+r3K/f3bp/hdmjxjaYFO3Orym8vhSzp11IrpMftuA5ALPGJrrG+bFHtIKW9ScGczc=,iv:sA6Y5J+BiDefxdJxcqKmZNK4829UFgqPZo4u3b2Iolk=,tag:9My1TdLaA/XMyXHBqGuz3Q==,type:str]
+  encrypted_suffix: Templates
+  version: 3.12.1
+---
+apiVersion: isindir.github.com/v1alpha3
+kind: SopsSecret
+metadata:
+  name: zeptoclaw
+  namespace: claw
+spec:
+  secretTemplates:
+    - name: ENC[AES256_GCM,data:nYZv3dezRLhCNhFr4w==,iv:c6VjhW+rAvOcfVK3LNTlNt3kpz0Bt+NOKfvfPm/icdk=,tag:TrhtnQkjJmir6GDJDhMaOA==,type:str]
+      type: ENC[AES256_GCM,data:on9YOWWJ,iv:NPS+NDQgmEo4cUbt90JE1WjkSE+0lWE/QBb2PFXqyzE=,tag:efJLI6qcI53kwigd+QJ47A==,type:str]
+      stringData:
+        ZEPTOCLAW_PROVIDERS_ANTHROPIC_API_KEY: ENC[AES256_GCM,data:bSx3Tg==,iv:+FKRyr/WBhCRpqvwHfXx//C0BASSwiPSOsMlIsBSJCA=,tag:fTLRJDaAR5R6BZN6kM2ERg==,type:str]
+sops:
+  age:
+    - recipient: age1cfvwwcvy3qj55kswlwymnvpwuwjymrp7xnjeycxma6qtdzv979qqd3kwue
+      enc: |
+        -----BEGIN AGE ENCRYPTED FILE-----
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZeFhrZFQ5UGhKWTc3dURB
+        Mnc1WVBocko4bHErNk1FSlZUdmtIUEVHSzNvCkN0VUR4MXc2Ym5QNVpXZlJnSFA1
+        UlZONUFRMExDM1RPQlFzZ0xnRTZnRlEKLS0tIHlWV1FXSFVDcVNEVER3WThXckVM
+        U1dPeFNSOUlXOEw4eVRBNHRqQ1cwVjgKy99XsZuVgqJlTI6uRSYQ3oxkBQ/SKArN
+        sG7VU8QsFcJpPZ7k9O5OJNaMujAvFgSPHkZESRbu8pAjTkpAOvbAUQ==
+        -----END AGE ENCRYPTED FILE-----
+  lastmodified: "2026-02-25T07:53:32Z"
+  mac: ENC[AES256_GCM,data:FlqD8RIdSQhS8zjJk0IDQ5Wp2bZO9SvNmbgo+pasKEolejrIG7qn60hyvHelGJetca/Y4SZbPDnZ/7Alyt0ZWEaEdF0fHQt81eFzkZotVc+r3K/f3bp/hdmjxjaYFO3Orym8vhSzp11IrpMftuA5ALPGJrrG+bFHtIKW9ScGczc=,iv:sA6Y5J+BiDefxdJxcqKmZNK4829UFgqPZo4u3b2Iolk=,tag:9My1TdLaA/XMyXHBqGuz3Q==,type:str]
   encrypted_suffix: Templates
   version: 3.12.1
