redirector: out.reddit.com

--- a/apps/base/redirector/configs/nginx.conf
+++ b/apps/base/redirector/configs/nginx.conf
@@ -7,7 +7,10 @@ events {
 }
 
 http {
-  access_log off;
+  # access_log off;
+
+  log_format vhosts '$host $remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent"';
+  access_log /var/log/nginx/access.log vhosts;
 
   client_body_temp_path /tmp/client_temp;
   fastcgi_temp_path /tmp/fastcgi_temp;
@@ -35,6 +38,17 @@ http {
     return 307 https://scribe.rip$request_uri;
   }
 
+  server { # Reddit
+    listen 8080;
+    server_name out.reddit.com;
+
+    add_header Referrer-Policy "no-referrer" always;
+
+    location / {
+      js_content redirect.redirectToUrlParameter;
+    }
+  }
+
   server { # Skimresources
     listen 8080;
     server_name go.skimresources.com;
@@ -46,6 +60,14 @@ http {
     }
   }
 
+  server { # TikTok
+    listen 8080;
+    server_name tiktok.com vm.tiktok.com www.tiktok.com;
+
+    add_header Referrer-Policy "no-referrer" always;
+    return 307 https://proxitok.pussthecat.org$request_uri;
+  }
+
   server { # Twitter
     listen 8080;
     server_name twitter.com *.twitter.com;
@@ -55,11 +77,20 @@ http {
     return 307 https://xcancel.com$request_uri;
   }
 
+  server { # YouTube
+    listen 8080;
+    server_name youtu.be youtube.com www.youtube.com;
+
+    add_header Referrer-Policy "no-referrer" always;
+    return 307 https://invidious.privacydev.net$request_uri;
+  }
+
   server {
     listen 8080 default_server;
     server_name _;
 
     location /healthz {
+      access_log off;
       add_header Content-Type text/plain;
       return 200 "OK\n";
     }
