--- a/infrastructure/controllers/kustomization.yaml
+++ b/infrastructure/controllers/kustomization.yaml
@@ -4,6 +4,10 @@ kind: Kustomization
 
 resources:
   - https://github.com/cert-manager/cert-manager/releases/download/v1.19.2/cert-manager.yaml
+  - https://raw.githubusercontent.com/SynologyOpenSource/synology-csi/refs/tags/v1.2.1/deploy/kubernetes/v1.20/controller.yml
+  - https://raw.githubusercontent.com/SynologyOpenSource/synology-csi/refs/tags/v1.2.1/deploy/kubernetes/v1.20/csi-driver.yml
+  - https://raw.githubusercontent.com/SynologyOpenSource/synology-csi/refs/tags/v1.2.1/deploy/kubernetes/v1.20/namespace.yml
+  - https://raw.githubusercontent.com/SynologyOpenSource/synology-csi/refs/tags/v1.2.1/deploy/kubernetes/v1.20/node.yml
   - linkerd.yaml
   - metallb.yaml
   - reloader.yaml
@@ -13,9 +17,49 @@ resources:
 patches:
   - patch: |
       - op: add
+        path: /metadata/annotations/secret.reloader.stakater.com~1reload
+        value: client-info-secret
+      - op: add
+        path: /spec/revisionHistoryLimit
+        value: 0
+      - op: add
+        path: /spec/template/spec/securityContext
+        value:
+          seccompProfile:
+            type: RuntimeDefault
+    target:
+      kind: DaemonSet
+      name: synology-csi-node
+      namespace: synology-csi
+  - patch: |
+      - op: add
         path: /spec/template/spec/containers/0/args/-
         value: --enable-certificate-owner-ref=true
     target:
       kind: Deployment
       name: cert-manager
       namespace: cert-manager
+  - patch: |
+      - op: add
+        path: /metadata/annotations
+        value:
+          linkerd.io/inject: disabled
+    target:
+      kind: Namespace
+      name: synology-csi
+  - patch: |
+      - op: add
+        path: /metadata/annotations/secret.reloader.stakater.com~1reload
+        value: client-info-secret
+      - op: add
+        path: /spec/revisionHistoryLimit
+        value: 0
+      - op: add
+        path: /spec/template/spec/securityContext
+        value:
+          seccompProfile:
+            type: RuntimeDefault
+    target:
+      kind: StatefulSet
+      name: synology-csi-controller
+      namespace: synology-csi
