--- a/apps/base/redirector/configs/nginx.conf
+++ b/apps/base/redirector/configs/nginx.conf
@@ -82,7 +82,7 @@ http {
     server_name youtu.be youtube.com www.youtube.com;
 
     add_header Referrer-Policy "no-referrer" always;
-    return 307 https://invidious.privacydev.net$request_uri;
+    return 307 https://invidious.nerdvpn.de$request_uri;
   }
 
   server {
